--- a/Main index/eartraining/Jam Tracks/Seven Worlds/2nd harmonic env/index.html
+++ b/Main index/eartraining/Jam Tracks/Seven Worlds/2nd harmonic env/index.html
@@ -4,94 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Ear Training</title>
-<style>
-    * {
-    box-sizing: border-box;
-    margin: 0;
-    padding: 0;
-}
-
-body {
-    background-color: #ecf0f1;
-    font-family: helvetica, arial, sans-serif;
-    font-size: 18px;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    margin: 0;
-}
-
-header {
-    margin: 20px 0;
-}
-
-header h1 {
-    font-size: 48px;
-    color: #3498db;
-    text-transform: uppercase;
-}
-
-nav {
-    margin: 20px 0;
-}
-
-nav a {
-    margin: 0 15px;
-    color: #3498db;
-    text-decoration: none;
-    font-size: 20px;
-}
-
-main {
-    width: 100%;
-    max-width: 1200px;
-    padding: 20px;
-}
-
-section {
-    margin-bottom: 40px;
-    text-align: center;
-}
-
-#Tekst {
-    max-width: 50%;
-    margin: 0 auto;
-    line-height: 1.8;
-    font-size: 20px;
-    color: #2c3e50;
-    text-align: justify;
-}
-
-#links-container {
-    display: flex;
-    justify-content: center;
-    flex-wrap: wrap;
-    gap: 30px;
-    margin: 20px 0;
-}
-
-.link {
-    text-decoration: none;
-    color: #2c3e50;
-    text-align: center;
-    transition: transform 0.3s, box-shadow 0.3s;
-    border-radius: 15px;
-}
-
-.link img {
-    border-radius: 15px;
-    width: 200px;
-    height: 200px;
-    object-fit: cover;
-}
-
-footer {
-    margin-top: 20px;
-    font-size: 14px;
-    color: #7f8c8d;
-}
-</style>>
-
+    <link rel="stylesheet body" href="https://thomastooten.github.io/JPRSite/Tegel met Tekst.css">
 </head>
 <body>
     <header>
@@ -105,40 +18,29 @@ footer {
 
     <main>
         <section>
-            <h2>Sing The Numbers</h2>
-            <div id="links-container">
-                <a class="link" href="https://thomastooten.github.io/JPRSite/Main index/eartraining/Sing the numbers/Tonal map/index.html">
-                    <img src="Afbeeldingen/Eartraining.png" alt="Tonal Map">
-                    <span>Tonal Map</span>
-                </a>
-                <a class="link" href="https://thomastooten.github.io/JPRSite/Main index/eartraining/Sing the numbers/Seven Worlds/index.html">
-                    <img src="Afbeeldingen/Sevenworlds.png" alt="Seven Worlds">
-                    <span>Seven Worlds</span>
-                </a>
-                <a class="link" href="https://thomastooten.github.io/JPRSite/Main index/eartraining/Sing the numbers/02121Melody Paths/index.html">
-                    <img src="Afbeeldingen/Melody Path.png" alt="Melody Path">
-                    <span>Melody Paths</span>
-                </a>
-            </div>
+            <h2> <a href="https://thomastooten.github.io/JPRSite/Main index/eartraining//Jam Tracks/Seven Worlds/index.html">Seven Worlds</a></h2>
         </section>
-
-        <section id="Tekst">
-            <h2>Oefentips</h2>
-            <p>
-                Tijdens het improviseren met de bijbehorende jamtracks kun je de tweede harmonische omgeving zien als een nieuwe wereld van geluiden om te verkennen en ontdekken. Maak je voorlopig geen zorgen over hoe deze geluiden zich verhouden tot de geluiden in de eerste harmonische omgeving. Dat zal duidelijk worden wanneer je begint te werken met akkoordprogressies. Voor nu kun je elke harmonische omgeving van de majeurtoonladder beschouwen als een aparte wereld om te ontdekken. Richt je op het leren van de muzikale lessen die elke harmonische omgeving je te bieden heeft.
-            </p>
-            <h2>Het gebruik van de jamtracks</h2>
-            <p>
-                Deze keer bouw je de tweede harmonische omgeving op je instrument. In de bijgevoegde mp3-jamtracks geeft de bestandsnaam aan waar je noot 2 op je instrument kunt vinden. (Vergeet niet deze noot te transponeren als je een transponerend instrument bespeelt.)
-            </p>
-            <p>
-                Bijvoorbeeld, de jamtrack in de toonsoort A geeft aan dat noot 2 = B is voor deze track. Je hoeft alleen maar de noot B op je instrument te vinden en je voor te stellen dat dit je noot 2 is. Gebruik vervolgens de hieronder afgebeelde toonladderkaart om de rest van de toonladder te construeren.
-            </p>
+        <section>
+            <h2>2nd harmonic environment</h2>
+        </section>
+        <div id="links-container">
+            <a class="link" href="https://thomastooten.github.io/JPRSite/Main index/eartraining/Jam Tracks/Seven Worlds/2nd harmonic env/jazz.html">
+                <img src="https://thomastooten.github.io/JPRSite/Main index/eartraining/Jam Tracks/Seven Worlds/Jazz.png" alt="Jazz">
+                <span>Jazz</span>
+            </a>
+            <a class="link" href="https://thomastooten.github.io/JPRSite/Main index/eartraining/Jam Tracks/Seven Worlds/2nd harmonic env/meditative.html">
+                <img src="https://thomastooten.github.io/JPRSite/Main index/eartraining/Jam Tracks/Seven Worlds/Meditative.png" alt="Meditative">
+                <span>Meditative</span>
+            </a>
+            <a class="link" href="https://thomastooten.github.io/JPRSite/Main index/eartraining/Jam Tracks/Seven Worlds/2nd harmonic env/modern.html">
+                <img src="https://thomastooten.github.io/JPRSite/Main index/eartraining/Jam Tracks/Seven Worlds/Modern.png" alt="Modern">
+                <span>Modern</span>
+            </a>
+        </div>
+        <section>
+            <h2></h2>
+            <iframe src="IFR Jam Tracks Level 1 - Seven Worlds - 2nd harmonic environment.pdf"></iframe>
         </section>
     </main>
-
-    <footer>
-        <p>Copyright David Reed 2017</p>
-    </footer>
 </body>
 </html>
