--- a/Main index/eartraining/Jam Tracks/Seven Worlds/2nd harmonic env/meditative.html
+++ b/Main index/eartraining/Jam Tracks/Seven Worlds/2nd harmonic env/meditative.html
@@ -25,7 +25,7 @@
             <h2>2nd harmonic env</h2>
         </section>
         <section id="steezy">
-            <h2>Jazz </h2>
+            <h2>Meditative</h2>
         </section>
 
         <div class="lesson-block">
