--- a/Main index/eartraining/Jam Tracks/Seven Worlds/2nd harmonic env/modern.html
+++ b/Main index/eartraining/Jam Tracks/Seven Worlds/2nd harmonic env/modern.html
@@ -27,6 +27,9 @@
         <section id="steezy">
             <h2>Modern</h2>
         </section>
+        <div class="lesson-block">   
+            <img src="schema.png" width="100%" >        
+        </div>
 
         <div class="lesson-block">
             <p>key of A (note = B) </p>
