--- a/Main index/eartraining/Jam Tracks/Seven Worlds/index.html
+++ b/Main index/eartraining/Jam Tracks/Seven Worlds/index.html
@@ -22,43 +22,43 @@
         <div id="links-container">
             <section>
             <a class="link" href="M1.html">
-                <img src="Afbeeldingen/M1.webp">
+                <img src="Afbeeldingen/M1.png">
                 <span>1st harmonic env</span>
             </a>
             </section>
             <section>
                 <a class="link" href="M2.html">
-                    <img src="Afbeeldingen/M2.webp">
+                    <img src="Afbeeldingen/M2.png">
                     <span>2nd harmonic env</span>
                 </a>
             </section>
             <section>
                 <a class="link" href="M3.html">
-                    <img src="Afbeeldingen/M3.webp">
+                    <img src="Afbeeldingen/M3.png">
                     <span>3rd harmonic env</span>
                 </a>
             </section>
             <section>
                 <a class="link" href="M4.html">
-                    <img src="Afbeeldingen/M4.webp">
+                    <img src="Afbeeldingen/M4.png">
                     <span>4th harmonic env</span>
                 </a>
             </section>
             <section>
                 <a class="link" href="M5.html">
-                    <img src="Afbeeldingen/M5.webp">
+                    <img src="Afbeeldingen/M5.png">
                     <span>5th harmonic env</span>
                 </a>
             </section>
             <section>
                 <a class="link" href="M6.html">
-                    <img src="Afbeeldingen/M6.webp">
+                    <img src="Afbeeldingen/M6.png">
                     <span>6th harmonic env</span>
                 </a>
             </section>
             <section>
                 <a class="link" href="M6.html">
-                    <img src="Afbeeldingen/M6.webp">
+                    <img src="Afbeeldingen/M6.png">
                     <span>7th harmonic env</span>
                 </a>
             </section>
