--- a/Main index/eartraining/Jam Tracks/Seven Worlds/index.html
+++ b/Main index/eartraining/Jam Tracks/Seven Worlds/index.html
@@ -17,48 +17,50 @@
     </Header>
     <main>
         <section>
-            <h2>Sing The numbers</h2>
+            <h2>Jam Tracks</h2><br>
+            <h2>Seven Worlds</h2>
         </section>
+
         <div id="links-container">
             <section>
-            <a class="link" href="M1.html">
+            <a class="link" href="https://thomastooten.github.io/JPRSite/Main index/eartraining/Jam Tracks/Seven Worlds/1st harmonic env/index.html">
                 <img src="Afbeeldingen/M1.png">
                 <span>1st harmonic env</span>
             </a>
             </section>
             <section>
-                <a class="link" href="M2.html">
+                <a class="link" href="https://thomastooten.github.io/JPRSite/Main index/eartraining/Jam Tracks/Seven Worlds/2nd harmonic env/index.html">
                     <img src="Afbeeldingen/M2.png">
                     <span>2nd harmonic env</span>
                 </a>
             </section>
             <section>
-                <a class="link" href="M3.html">
+                <a class="link" href="https://thomastooten.github.io/JPRSite/Main index/eartraining/Jam Tracks/Seven Worlds/3rd harmonic env/index.html">
                     <img src="Afbeeldingen/M3.png">
                     <span>3rd harmonic env</span>
                 </a>
             </section>
             <section>
-                <a class="link" href="M4.html">
+                <a class="link" href="https://thomastooten.github.io/JPRSite/Main index/eartraining/Jam Tracks/Seven Worlds/4th harmonic env/index.html">
                     <img src="Afbeeldingen/M4.png">
                     <span>4th harmonic env</span>
                 </a>
             </section>
             <section>
-                <a class="link" href="M5.html">
+                <a class="link" href="https://thomastooten.github.io/JPRSite/Main index/eartraining/Jam Tracks/Seven Worlds/5th harmonic env/index.html">
                     <img src="Afbeeldingen/M5.png">
                     <span>5th harmonic env</span>
                 </a>
             </section>
             <section>
-                <a class="link" href="M6.html">
+                <a class="link" href="https://thomastooten.github.io/JPRSite/Main index/eartraining/Jam Tracks/Seven Worlds/6th harmonic env/index.html">
                     <img src="Afbeeldingen/M6.png">
                     <span>6th harmonic env</span>
                 </a>
             </section>
             <section>
-                <a class="link" href="M6.html">
-                    <img src="Afbeeldingen/M6.png">
+                <a class="link" href="https://thomastooten.github.io/JPRSite/Main index/eartraining/Jam Tracks/Seven Worlds/7th harmonic env/index.html">
+                    <img src="Afbeeldingen/M7.png">
                     <span>7th harmonic env</span>
                 </a>
             </section>
