--- a/Main index/eartraining/index.html
+++ b/Main index/eartraining/index.html
@@ -71,7 +71,7 @@
                     </a>
                 </section>
                 <section>
-                    <a class="link" href="">
+                    <a class="link" href="https://thomastooten.github.io/JPRSite/Main index/eartraining/Jam Tracks/Seven Worlds/index.html">
                         <img src="Afbeeldingen/7W.webp" alt="Melody Path" height="200" width="200">
                         <span>Seven Worlds</span>
                     </a>
