--- a/Main index/eartraining/Jam Tracks/Seven Worlds/index.html
+++ b/Main index/eartraining/Jam Tracks/Seven Worlds/index.html
@@ -24,43 +24,43 @@
         <div id="links-container">
             <section>
             <a class="link" href="https://thomastooten.github.io/JPRSite/Main index/eartraining/Jam Tracks/Seven Worlds/1st harmonic env/index.html">
-                <img src="Afbeeldingen/M1.png">
+                <img src="https://thomastooten.github.io/JPRSite/Main index/eartraining/Jam Tracks/Seven Worlds/Afbeeldingen/M1.png">
                 <span>1st harmonic env</span>
             </a>
             </section>
             <section>
                 <a class="link" href="https://thomastooten.github.io/JPRSite/Main index/eartraining/Jam Tracks/Seven Worlds/2nd harmonic env/index.html">
-                    <img src="Afbeeldingen/M2.png">
+                    <img src="https://thomastooten.github.io/JPRSite/Main index/eartraining/Jam Tracks/Seven Worlds/Afbeeldingen/M2.png">
                     <span>2nd harmonic env</span>
                 </a>
             </section>
             <section>
                 <a class="link" href="https://thomastooten.github.io/JPRSite/Main index/eartraining/Jam Tracks/Seven Worlds/3rd harmonic env/index.html">
-                    <img src="Afbeeldingen/M3.png">
+                    <img src="https://thomastooten.github.io/JPRSite/Main index/eartraining/Jam Tracks/Seven Worlds/Afbeeldingen/M3.png">
                     <span>3rd harmonic env</span>
                 </a>
             </section>
             <section>
                 <a class="link" href="https://thomastooten.github.io/JPRSite/Main index/eartraining/Jam Tracks/Seven Worlds/4th harmonic env/index.html">
-                    <img src="Afbeeldingen/M4.png">
+                    <img src="https://thomastooten.github.io/JPRSite/Main index/eartraining/Jam Tracks/Seven Worlds/Afbeeldingen/M4.png">
                     <span>4th harmonic env</span>
                 </a>
             </section>
             <section>
                 <a class="link" href="https://thomastooten.github.io/JPRSite/Main index/eartraining/Jam Tracks/Seven Worlds/5th harmonic env/index.html">
-                    <img src="Afbeeldingen/M5.png">
+                    <img src="https://thomastooten.github.io/JPRSite/Main index/eartraining/Jam Tracks/Seven Worlds/Afbeeldingen/M5.png">
                     <span>5th harmonic env</span>
                 </a>
             </section>
             <section>
                 <a class="link" href="https://thomastooten.github.io/JPRSite/Main index/eartraining/Jam Tracks/Seven Worlds/6th harmonic env/index.html">
-                    <img src="Afbeeldingen/M6.png">
+                    <img src="https://thomastooten.github.io/JPRSite/Main index/eartraining/Jam Tracks/Seven Worlds/Afbeeldingen/M6.png">
                     <span>6th harmonic env</span>
                 </a>
             </section>
             <section>
                 <a class="link" href="https://thomastooten.github.io/JPRSite/Main index/eartraining/Jam Tracks/Seven Worlds/7th harmonic env/index.html">
-                    <img src="Afbeeldingen/M7.png">
+                    <img src="https://thomastooten.github.io/JPRSite/Main index/eartraining/Jam Tracks/Seven Worlds/Afbeeldingen/M7.png">
                     <span>7th harmonic env</span>
                 </a>
             </section>
