--- a/Main index/eartraining/Jam Tracks/Seven Worlds/1st harmonic env/index.html
+++ b/Main index/eartraining/Jam Tracks/Seven Worlds/1st harmonic env/index.html
@@ -36,6 +36,8 @@
         </div>
         <section>
             <iframe src="https://thomastooten.github.io/JPRSite/Main index/eartraining/Jam Tracks/Seven Worlds/1st harmonic env/IFR Jam Tracks Level 1 - Seven Worlds - 1st harmonic environment.pdf"></iframe>
+            <p>ingebouwde pdf viewer</p>
+            <embed src="https://thomastooten.github.io/JPRSite/Main index/eartraining/Jam Tracks/Seven Worlds/1st harmonic env/IFR Jam Tracks Level 1 - Seven Worlds - 1st harmonic environment.pdf" type="application/pdf" width="100%" height="600px">
         </section>
     </main>
 </body>
