--- a/Main index/eartraining/Jam Tracks/Tonal Map/Mix Harmony/index.html
+++ b/Main index/eartraining/Jam Tracks/Tonal Map/Mix Harmony/index.html
@@ -24,92 +24,93 @@
         <div id="links-container">
             <section>
             <a class="link" href="https://thomastooten.github.io/JPRSite/Main index/eartraining/Jam Tracks/Tonal Map/Mix Harmony/Lesson 1.html">
-                <img src="https://thomastooten.github.io/JPRSite/Main index/eartraining/Jam Tracks/Seven Worlds/Afbeeldingen/M1.png">
-                <span>1st harmonic env</span>
+                <img src="https://thomastooten.github.io/JPRSite/Main index/eartraining/Jam Tracks/Tonal Map/Mix Harmony/Afbeeldingen/M1.png">
+                <span>lesson 1 </span>
+
             </a>
             </section>
             <section>
-                <a class="link" href="https://thomastooten.github.io/JPRSite/Main index/eartraining/Jam Tracks/Tonal Map/Mix Harmony/Lesson 1.html">
-                    <img src="https://thomastooten.github.io/JPRSite/Main index/eartraining/Jam Tracks/Seven Worlds/Afbeeldingen/M1.png">
-                    <span>1st harmonic env</span>
+                <a class="link" href="https://thomastooten.github.io/JPRSite/Main index/eartraining/Jam Tracks/Tonal Map/Mix Harmony/Lesson 2.html">
+                    <img src="https://thomastooten.github.io/JPRSite/Main index/eartraining/Jam Tracks/Tonal Map/Mix Harmony/Afbeeldingen/M2.png">
+                    <span>lesson 2</span>
                 </a>
                 </section>
                 <section>
-                    <a class="link" href="https://thomastooten.github.io/JPRSite/Main index/eartraining/Jam Tracks/Tonal Map/Mix Harmony/Lesson 1.html">
-                        <img src="https://thomastooten.github.io/JPRSite/Main index/eartraining/Jam Tracks/Seven Worlds/Afbeeldingen/M1.png">
-                        <span>1st harmonic env</span>
+                    <a class="link" href="https://thomastooten.github.io/JPRSite/Main index/eartraining/Jam Tracks/Tonal Map/Mix Harmony/Lesson 3.html">
+                        <img src="https://thomastooten.github.io/JPRSite/Main index/eartraining/Jam Tracks/Tonal Map/Mix Harmony/Afbeeldingen/M3.png">
+                        <span>lesson 3</span>
                     </a>
                     </section>
                     <section>
-                        <a class="link" href="https://thomastooten.github.io/JPRSite/Main index/eartraining/Jam Tracks/Tonal Map/Mix Harmony/Lesson 1.html">
-                            <img src="https://thomastooten.github.io/JPRSite/Main index/eartraining/Jam Tracks/Seven Worlds/Afbeeldingen/M1.png">
-                            <span>1st harmonic env</span>
+                        <a class="link" href="https://thomastooten.github.io/JPRSite/Main index/eartraining/Jam Tracks/Tonal Map/Mix Harmony/Lesson 4.html">
+                            <img src="https://thomastooten.github.io/JPRSite/Main index/eartraining/Jam Tracks/Tonal Map/Mix Harmony/Afbeeldingen/M4.png">
+                            <span>lesson 4</span>
                         </a>
                         </section>
                         <section>
-                            <a class="link" href="https://thomastooten.github.io/JPRSite/Main index/eartraining/Jam Tracks/Tonal Map/Mix Harmony/Lesson 1.html">
-                                <img src="https://thomastooten.github.io/JPRSite/Main index/eartraining/Jam Tracks/Seven Worlds/Afbeeldingen/M1.png">
-                                <span>1st harmonic env</span>
+                            <a class="link" href="https://thomastooten.github.io/JPRSite/Main index/eartraining/Jam Tracks/Tonal Map/Mix Harmony/Lesson 5.html">
+                                <img src="https://thomastooten.github.io/JPRSite/Main index/eartraining/Jam Tracks/Tonal Map/Mix Harmony/Afbeeldingen/M5.png">
+                                <span>lesson 5</span>
                             </a>
                             </section>
                             <section>
-                                <a class="link" href="https://thomastooten.github.io/JPRSite/Main index/eartraining/Jam Tracks/Tonal Map/Mix Harmony/Lesson 1.html">
-                                    <img src="https://thomastooten.github.io/JPRSite/Main index/eartraining/Jam Tracks/Seven Worlds/Afbeeldingen/M1.png">
-                                    <span>1st harmonic env</span>
+                                <a class="link" href="https://thomastooten.github.io/JPRSite/Main index/eartraining/Jam Tracks/Tonal Map/Mix Harmony/Lesson 6.html">
+                                    <img src="https://thomastooten.github.io/JPRSite/Main index/eartraining/Jam Tracks/Tonal Map/Mix Harmony/Afbeeldingen/M6.png">
+                                    <span>lesson 6</span>
                                 </a>
                                 </section>
                                 <section>
-                                    <a class="link" href="https://thomastooten.github.io/JPRSite/Main index/eartraining/Jam Tracks/Tonal Map/Mix Harmony/Lesson 1.html">
-                                        <img src="https://thomastooten.github.io/JPRSite/Main index/eartraining/Jam Tracks/Seven Worlds/Afbeeldingen/M1.png">
-                                        <span>1st harmonic env</span>
+                                    <a class="link" href="https://thomastooten.github.io/JPRSite/Main index/eartraining/Jam Tracks/Tonal Map/Mix Harmony/Lesson 7.html">
+                                        <img src="https://thomastooten.github.io/JPRSite/Main index/eartraining/Jam Tracks/Tonal Map/Mix Harmony/Afbeeldingen/M7.png">
+                                        <span>lesson 7</span>
                                     </a>
                                     </section>
                                     <section>
-                                        <a class="link" href="https://thomastooten.github.io/JPRSite/Main index/eartraining/Jam Tracks/Tonal Map/Mix Harmony/Lesson 1.html">
-                                            <img src="https://thomastooten.github.io/JPRSite/Main index/eartraining/Jam Tracks/Seven Worlds/Afbeeldingen/M1.png">
-                                            <span>1st harmonic env</span>
+                                        <a class="link" href="https://thomastooten.github.io/JPRSite/Main index/eartraining/Jam Tracks/Tonal Map/Mix Harmony/Lesson 8.html">
+                                            <img src="https://thomastooten.github.io/JPRSite/Main index/eartraining/Jam Tracks/Tonal Map/Mix Harmony/Afbeeldingen/M8.png">
+                                            <span>lesson 8</span>
                                         </a>
                                         </section>
                                         <section>
-                                            <a class="link" href="https://thomastooten.github.io/JPRSite/Main index/eartraining/Jam Tracks/Tonal Map/Mix Harmony/Lesson 1.html">
-                                                <img src="https://thomastooten.github.io/JPRSite/Main index/eartraining/Jam Tracks/Seven Worlds/Afbeeldingen/M1.png">
-                                                <span>1st harmonic env</span>
+                                            <a class="link" href="https://thomastooten.github.io/JPRSite/Main index/eartraining/Jam Tracks/Tonal Map/Mix Harmony/Lesson 9.html">
+                                                <img src="https://thomastooten.github.io/JPRSite/Main index/eartraining/Jam Tracks/Tonal Map/Mix Harmony/Afbeeldingen/M9.png">
+                                                <span>lesson 9</span>
                                             </a>
                                             </section>
                                             <section>
-                                                <a class="link" href="https://thomastooten.github.io/JPRSite/Main index/eartraining/Jam Tracks/Tonal Map/Mix Harmony/Lesson 1.html">
-                                                    <img src="https://thomastooten.github.io/JPRSite/Main index/eartraining/Jam Tracks/Seven Worlds/Afbeeldingen/M1.png">
-                                                    <span>1st harmonic env</span>
+                                                <a class="link" href="https://thomastooten.github.io/JPRSite/Main index/eartraining/Jam Tracks/Tonal Map/Mix Harmony/Lesson 10.html">
+                                                    <img src="https://thomastooten.github.io/JPRSite/Main index/eartraining/Jam Tracks/Tonal Map/Mix Harmony/Afbeeldingen/M10.png">
+                                                    <span>lesson 10</span>
                                                 </a>
                                                 </section>
                                                 <section>
-                                                    <a class="link" href="https://thomastooten.github.io/JPRSite/Main index/eartraining/Jam Tracks/Tonal Map/Mix Harmony/Lesson 1.html">
-                                                        <img src="https://thomastooten.github.io/JPRSite/Main index/eartraining/Jam Tracks/Seven Worlds/Afbeeldingen/M1.png">
-                                                        <span>1st harmonic env</span>
+                                                    <a class="link" href="https://thomastooten.github.io/JPRSite/Main index/eartraining/Jam Tracks/Tonal Map/Mix Harmony/Lesson 11.html">
+                                                        <img src="https://thomastooten.github.io/JPRSite/Main index/eartraining/Jam Tracks/Tonal Map/Mix Harmony/Afbeeldingen/M11.png">
+                                                        <span>lesson 11</span>
                                                     </a>
                                                     </section>
                                                     <section>
-                                                        <a class="link" href="https://thomastooten.github.io/JPRSite/Main index/eartraining/Jam Tracks/Tonal Map/Mix Harmony/Lesson 1.html">
-                                                            <img src="https://thomastooten.github.io/JPRSite/Main index/eartraining/Jam Tracks/Seven Worlds/Afbeeldingen/M1.png">
-                                                            <span>1st harmonic env</span>
+                                                        <a class="link" href="https://thomastooten.github.io/JPRSite/Main index/eartraining/Jam Tracks/Tonal Map/Mix Harmony/Lesson 12.html">
+                                                            <img src="https://thomastooten.github.io/JPRSite/Main index/eartraining/Jam Tracks/Tonal Map/Mix Harmony/Afbeeldingen/M12.png">
+                                                            <span>lesson 12</span>
                                                         </a>
                                                         </section>
                                                         <section>
-                                                            <a class="link" href="https://thomastooten.github.io/JPRSite/Main index/eartraining/Jam Tracks/Tonal Map/Mix Harmony/Lesson 1.html">
-                                                                <img src="https://thomastooten.github.io/JPRSite/Main index/eartraining/Jam Tracks/Seven Worlds/Afbeeldingen/M1.png">
-                                                                <span>1st harmonic env</span>
+                                                            <a class="link" href="https://thomastooten.github.io/JPRSite/Main index/eartraining/Jam Tracks/Tonal Map/Mix Harmony/Lesson 13.html">
+                                                                <img src="https://thomastooten.github.io/JPRSite/Main index/eartraining/Jam Tracks/Tonal Map/Mix Harmony/Afbeeldingen/M13.png">
+                                                                <span>lesson 13</span>
                                                             </a>
                                                             </section>
                                                             <section>
-                                                                <a class="link" href="https://thomastooten.github.io/JPRSite/Main index/eartraining/Jam Tracks/Tonal Map/Mix Harmony/Lesson 1.html">
-                                                                    <img src="https://thomastooten.github.io/JPRSite/Main index/eartraining/Jam Tracks/Seven Worlds/Afbeeldingen/M1.png">
-                                                                    <span>1st harmonic env</span>
+                                                                <a class="link" href="https://thomastooten.github.io/JPRSite/Main index/eartraining/Jam Tracks/Tonal Map/Mix Harmony/Lesson 14.html">
+                                                                    <img src="https://thomastooten.github.io/JPRSite/Main index/eartraining/Jam Tracks/Tonal Map/Mix Harmony/Afbeeldingen/M14.png">
+                                                                    <span>lesson 14</span>
                                                                 </a>
                                                                 </section>
            <section>
-            <a class="link" href="https://thomastooten.github.io/JPRSite/Main index/eartraining/Jam Tracks/Tonal Map/Mix Harmony/Lesson 1.html">
-                <img src="https://thomastooten.github.io/JPRSite/Main index/eartraining/Jam Tracks/Seven Worlds/Afbeeldingen/M1.png">
-                <span>1st harmonic env</span>
+            <a class="link" href="https://thomastooten.github.io/JPRSite/Main index/eartraining/Jam Tracks/Tonal Map/Mix Harmony/Lesson 15.html">
+                <img src="https://thomastooten.github.io/JPRSite/Main index/eartraining/Jam Tracks/Tonal Map/Mix Harmony/Afbeeldingen/M15.png">
+                <span>lesson 15</span>
             </a>
             </section>
                                                                                                                                                                                                                                                                                                                                                                                        
